syntax = "proto3";

package chess;

service ChessService {
  rpc StartGame (StartGameRequest) returns (StartGameResponse);
  rpc Move (MoveRequest) returns (MoveResponse);
  rpc Forfeit (ForfeitRequest) returns (ForfeitResponse);
}

message StartGameRequest {}

message StartGameResponse {
  string game = 1;
}

message MoveRequest {
  string client_ip = 1;
  int32 client_port = 2;
  string move = 3;
  string color = 4;
}

message MoveResponse {
  string status = 1;
  string game = 2;
}

message ForfeitRequest {
  string client_ip = 1;
  int32 client_port = 2;
  string color = 3;
}

message ForfeitResponse {
  string status = 1;
  string message = 2;
}